--- a/mod01_review.ipynb
+++ b/mod01_review.ipynb
@@ -276,7 +276,9 @@
    "id": "a4c1aba7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Credit.columns"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -308,9 +310,7 @@
    "id": "27ba0f36",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# mean"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -319,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# median"
+    "    "
    ]
   },
   {
@@ -328,9 +328,7 @@
    "id": "4806a30d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# mode"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
