--- a/mod01_review.ipynb
+++ b/mod01_review.ipynb
@@ -11,6 +11,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f26ab97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "101ab3c2",
    "metadata": {},
@@ -294,7 +302,9 @@
    "id": "c58526a0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "categorical"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,7 +320,9 @@
    "id": "27ba0f36",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Credit['Age'].mean()"
+   ]
   },
   {
    "cell_type": "code",
@@ -319,7 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    "
+    "Credit['Age'].median()"
    ]
   },
   {
@@ -328,7 +340,9 @@
    "id": "4806a30d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Credit['Age'].mode()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -345,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Subset = "
+    "Subset = Credit['Age', 'Region', 'Income']"
    ]
   },
   {
@@ -365,7 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Younger = "
+    "Younger = Subset[Subset['Age'] < 50]"
    ]
   },
   {
@@ -375,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Older = "
+    "Older = Subset[Subset['Age'] > 50]"
    ]
   },
   {
@@ -393,7 +407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mean of younger"
+    "Younger['Income'].mean()"
    ]
   },
   {
@@ -403,7 +417,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mean of older"
+    "Older['Income'].mean()"
    ]
   },
   {
@@ -413,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# median of younger"
+    "Younger['Income'].median()"
    ]
   },
   {
@@ -423,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# median of older"
+    "Older['Income'].median()"
    ]
   },
   {
@@ -443,6 +457,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6dd5ce4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "01db69c8",
    "metadata": {},
@@ -456,7 +478,9 @@
    "id": "d2954498",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "2"
+   ]
   },
   {
    "cell_type": "markdown",
