--- a/mod02_trainingsplit.ipynb
+++ b/mod02_trainingsplit.ipynb
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "aafdbfbf-e9c7-4d59-92c4-0e7f74022096",
    "metadata": {},
    "outputs": [
@@ -673,7 +673,7 @@
        "x_cu      -0.0099    0.031  -0.316  0.753"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,27 +686,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "id": "828ef9e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train['pred_cu'] = predict(x_train[['intercept','x','x_sq','x_cu']], results_cubic)\n"
+    "x_train['pred_cu'] = predict(x_train[['intercept','x','x_sq','x_cu']], results_cubic)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "938de1a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1eadf93dc10>]"
+       "[<matplotlib.lines.Line2D at 0x1eadf967170>]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -723,7 +723,7 @@
    ],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "ax.scatter(x_train['x'],y_train)\n",
+    "ax.scatter(x_train['x'], y_train)\n",
     "cubic = x_train[['x','pred_cu']].sort_values('x')\n",
     "ax.plot(cubic['x'], cubic['pred_cu'], color='red')"
    ]
@@ -822,7 +822,7 @@
    "id": "deb74c23",
    "metadata": {},
    "source": [
-    "The quadratic model clearly works best since it matches the curve without getting weird, the linear model underfits because it’s way too simple, and the cubic model overfits by bending around randomness in data.\n"
+    "The quadratic model works best since it matches the curve without being off, this is because we used quadratic data. The linear model underfits because it’s way too simple. While the cubic model looks the same as the quadratic it would overfit if there is more noise or randomness in data.\n"
    ]
   }
  ],
